infra/cdk.out/KaranTakeHomeEcsStack.template.json
{
 "Resources": {
  "speechtotextvpcAD23861A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/Resource"
   }
  },
  "speechtotextvpcPublicSubnet1SubnetF23A7158": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/Subnet"
   }
  },
  "speechtotextvpcPublicSubnet1RouteTable927CE59F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/RouteTable"
   }
  },
  "speechtotextvpcPublicSubnet1RouteTableAssociationE5078E08": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "speechtotextvpcPublicSubnet1RouteTable927CE59F"
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPublicSubnet1SubnetF23A7158"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "speechtotextvpcPublicSubnet1DefaultRouteB2DC486A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "speechtotextvpcIGW4F5C4B37"
    },
    "RouteTableId": {
     "Ref": "speechtotextvpcPublicSubnet1RouteTable927CE59F"
    }
   },
   "DependsOn": [
    "speechtotextvpcVPCGWC6086633"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "speechtotextvpcPublicSubnet1EIPF0A60E33": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/EIP"
   }
  },
  "speechtotextvpcPublicSubnet1NATGatewayF2F53F6D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "speechtotextvpcPublicSubnet1EIPF0A60E33",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPublicSubnet1SubnetF23A7158"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "speechtotextvpcPublicSubnet1DefaultRouteB2DC486A",
    "speechtotextvpcPublicSubnet1RouteTableAssociationE5078E08"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet1/NATGateway"
   }
  },
  "speechtotextvpcPublicSubnet2Subnet42AD21D2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/Subnet"
   }
  },
  "speechtotextvpcPublicSubnet2RouteTable40045671": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/RouteTable"
   }
  },
  "speechtotextvpcPublicSubnet2RouteTableAssociation223283F5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "speechtotextvpcPublicSubnet2RouteTable40045671"
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPublicSubnet2Subnet42AD21D2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "speechtotextvpcPublicSubnet2DefaultRoute2CF14C67": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "speechtotextvpcIGW4F5C4B37"
    },
    "RouteTableId": {
     "Ref": "speechtotextvpcPublicSubnet2RouteTable40045671"
    }
   },
   "DependsOn": [
    "speechtotextvpcVPCGWC6086633"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "speechtotextvpcPublicSubnet2EIP1E9F925D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/EIP"
   }
  },
  "speechtotextvpcPublicSubnet2NATGatewayF186F2D0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "speechtotextvpcPublicSubnet2EIP1E9F925D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPublicSubnet2Subnet42AD21D2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "speechtotextvpcPublicSubnet2DefaultRoute2CF14C67",
    "speechtotextvpcPublicSubnet2RouteTableAssociation223283F5"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PublicSubnet2/NATGateway"
   }
  },
  "speechtotextvpcPrivateSubnet1Subnet5F94A622": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1/Subnet"
   }
  },
  "speechtotextvpcPrivateSubnet1RouteTableA2E665A7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "speechtotextvpcPrivateSubnet1RouteTableAssociation509210CF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "speechtotextvpcPrivateSubnet1RouteTableA2E665A7"
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPrivateSubnet1Subnet5F94A622"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "speechtotextvpcPrivateSubnet1DefaultRouteD16845DF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "speechtotextvpcPublicSubnet1NATGatewayF2F53F6D"
    },
    "RouteTableId": {
     "Ref": "speechtotextvpcPrivateSubnet1RouteTableA2E665A7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "speechtotextvpcPrivateSubnet2Subnet186934DF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2/Subnet"
   }
  },
  "speechtotextvpcPrivateSubnet2RouteTable2AD48F16": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "speechtotextvpcPrivateSubnet2RouteTableAssociation018F07E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "speechtotextvpcPrivateSubnet2RouteTable2AD48F16"
    },
    "SubnetId": {
     "Ref": "speechtotextvpcPrivateSubnet2Subnet186934DF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "speechtotextvpcPrivateSubnet2DefaultRouteE77ABA9F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "speechtotextvpcPublicSubnet2NATGatewayF186F2D0"
    },
    "RouteTableId": {
     "Ref": "speechtotextvpcPrivateSubnet2RouteTable2AD48F16"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "speechtotextvpcIGW4F5C4B37": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KaranTakeHomeEcsStack/speech-to-text-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/IGW"
   }
  },
  "speechtotextvpcVPCGWC6086633": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "speechtotextvpcIGW4F5C4B37"
    },
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-vpc/VPCGW"
   }
  },
  "speechtotextclusterD1A9B9BF": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-cluster/Resource"
   }
  },
  "speechtotextserviceLB76656470": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "speechtotextserviceLBSecurityGroup9CE9F8D2",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "speechtotextvpcPublicSubnet1SubnetF23A7158"
     },
     {
      "Ref": "speechtotextvpcPublicSubnet2Subnet42AD21D2"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "speechtotextvpcPublicSubnet1DefaultRouteB2DC486A",
    "speechtotextvpcPublicSubnet1RouteTableAssociationE5078E08",
    "speechtotextvpcPublicSubnet2DefaultRoute2CF14C67",
    "speechtotextvpcPublicSubnet2RouteTableAssociation223283F5"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/LB/Resource"
   }
  },
  "speechtotextserviceLBSecurityGroup9CE9F8D2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB KaranTakeHomeEcsStackspeechtotextserviceLBB48F2AD8",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/LB/SecurityGroup/Resource"
   }
  },
  "speechtotextserviceLBSecurityGrouptoKaranTakeHomeEcsStackspeechtotextserviceServiceSecurityGroupDC5595B680808DDA448B": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "speechtotextserviceServiceSecurityGroup4C69F64A",
      "GroupId"
     ]
    },
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "speechtotextserviceLBSecurityGroup9CE9F8D2",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/LB/SecurityGroup/to KaranTakeHomeEcsStackspeechtotextserviceServiceSecurityGroupDC5595B6:8080"
   }
  },
  "speechtotextserviceLBPublicListener9947952E": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "speechtotextserviceLBPublicListenerECSGroupA790D745"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "speechtotextserviceLB76656470"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/LB/PublicListener/Resource"
   }
  },
  "speechtotextserviceLBPublicListenerECSGroupA790D745": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "speechtotextserviceTaskDefTaskRoleEED65ABB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/TaskRole/Resource"
   }
  },
  "speechtotextserviceTaskDef0F36FDF5": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "DependsOn": [
       {
        "Condition": "HEALTHY",
        "ContainerName": "faster-whisper-server"
       }
      ],
      "Environment": [
       {
        "Name": "WHISPER_URL",
        "Value": "http://localhost:8000"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         "058576480351.dkr.ecr.us-east-1.",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/speech-to-text:latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "speechtotextserviceTaskDefspeechtotextLogGroup5A4ABFD1"
        },
        "awslogs-stream-prefix": "speech-to-text-service",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "speech-to-text",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     },
     {
      "Cpu": 1536,
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "curl -f http://localhost:8000/health || exit 1"
       ],
       "Interval": 30,
       "Retries": 3,
       "StartPeriod": 60,
       "Timeout": 5
      },
      "Image": "fedirz/faster-whisper-server:sha-307e23f-cpu",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "speechtotextserviceTaskDeffasterwhisperserverLogGroup69CB8623"
        },
        "awslogs-stream-prefix": "faster-whisper",
        "awslogs-region": "us-east-1"
       }
      },
      "Memory": 3584,
      "Name": "faster-whisper-server",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "2048",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "speechtotextserviceTaskDefExecutionRole43AF6F2B",
      "Arn"
     ]
    },
    "Family": "KaranTakeHomeEcsStackspeechtotextserviceTaskDef6DEA1507",
    "Memory": "4096",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "speechtotextserviceTaskDefTaskRoleEED65ABB",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/Resource"
   }
  },
  "speechtotextserviceTaskDefspeechtotextLogGroup5A4ABFD1": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/speech-to-text/LogGroup/Resource"
   }
  },
  "speechtotextserviceTaskDefExecutionRole43AF6F2B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/ExecutionRole/Resource"
   }
  },
  "speechtotextserviceTaskDefExecutionRoleDefaultPolicy429648A3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:us-east-1:058576480351:repository/speech-to-text"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "speechtotextserviceTaskDefspeechtotextLogGroup5A4ABFD1",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "speechtotextserviceTaskDeffasterwhisperserverLogGroup69CB8623",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "speechtotextserviceTaskDefExecutionRoleDefaultPolicy429648A3",
    "Roles": [
     {
      "Ref": "speechtotextserviceTaskDefExecutionRole43AF6F2B"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "speechtotextserviceTaskDeffasterwhisperserverLogGroup69CB8623": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/TaskDef/faster-whisper-server/LogGroup/Resource"
   }
  },
  "speechtotextserviceServiceB6191E2C": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "speechtotextclusterD1A9B9BF"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "speech-to-text",
      "ContainerPort": 8080,
      "TargetGroupArn": {
       "Ref": "speechtotextserviceLBPublicListenerECSGroupA790D745"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "speechtotextserviceServiceSecurityGroup4C69F64A",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "speechtotextvpcPrivateSubnet1Subnet5F94A622"
       },
       {
        "Ref": "speechtotextvpcPrivateSubnet2Subnet186934DF"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "speechtotextserviceTaskDef0F36FDF5"
    }
   },
   "DependsOn": [
    "speechtotextserviceLBPublicListenerECSGroupA790D745",
    "speechtotextserviceLBPublicListener9947952E",
    "speechtotextserviceTaskDefTaskRoleEED65ABB"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/Service/Service"
   }
  },
  "speechtotextserviceServiceSecurityGroup4C69F64A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "KaranTakeHomeEcsStack/speech-to-text-service/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "speechtotextvpcAD23861A"
    }
   },
   "DependsOn": [
    "speechtotextserviceTaskDefTaskRoleEED65ABB"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/Service/SecurityGroup/Resource"
   }
  },
  "speechtotextserviceServiceSecurityGroupfromKaranTakeHomeEcsStackspeechtotextserviceLBSecurityGroup538899E8808016BD2F35": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "speechtotextserviceServiceSecurityGroup4C69F64A",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "speechtotextserviceLBSecurityGroup9CE9F8D2",
      "GroupId"
     ]
    },
    "ToPort": 8080
   },
   "DependsOn": [
    "speechtotextserviceTaskDefTaskRoleEED65ABB"
   ],
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/speech-to-text-service/Service/SecurityGroup/from KaranTakeHomeEcsStackspeechtotextserviceLBSecurityGroup538899E8:8080"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S227CMAz9lr2HDKr9ALANIU1b1aK9Tm7qdR4hqWIHhKr++9QWCrtoTz4+OXZ8nCQ6Se709AYOPDHldmKp0E0uYLYKDvzWoEl081obtXx3r+lSpbGwZPJYOJSOu6DMR8ENFBYv/IWbM3tDIOTdKO7AwzrtwjPICgQPcFRpoD0IXhqvnWBwOAqGSU7ZXATMxw6dqBxNDCTHVfCx7mf4l3ioAjL/oteu51uFhnWztJEFQ6c6w0cIFXSueHuP7+To7Okn450AOQxX3Kk2x7AnM+xpgN11QWdYeybx4bgAxm6Ctxqkc896XteWTL/AJw/lAiw4g+WPjmiBhYz1UBa9gly1T3Tzd3Xv61t+rSMWdCfNGV+dbyBUKONur9JWEex0k/nhK/Qx9ZZM/3YDapX1FevmyVdjizNuW5Uh+xiGFb1EqaO0yvkS9Sff7pOpns307OaTiSYhO [...]
   },
   "Metadata": {
    "aws:cdk:path": "KaranTakeHomeEcsStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "speechtotextserviceLoadBalancerDNSC9B965B0": {
   "Value": {
    "Fn::GetAtt": [
     "speechtotextserviceLB76656470",
     "DNSName"
    ]
   }
  },
  "speechtotextserviceServiceURL4323BBD2": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "speechtotextserviceLB76656470",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
